delete unnecessary files for clean upload

--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 <body class="bg-gray-100 text-gray-800 flex flex-col min-h-screen">
 <header class="flex justify-between items-center bg-orange-400 p-4 shadow-md">
     <img src="images/Icon.png" alt="no image" class="w-10 h-10">
-    <h1 class="text-2xl font-semibold">E-Commerce</h1>
+    <a href="ecommerce.html"><h1 class="text-2xl font-semibold">E-Commerce</h1></a>
 
 
 
@@ -28,20 +28,20 @@
     </div>
 
     <div class="flex gap-4 items-center ">
-        <!-- Shopping Cart Icon (Only SVG) -->
-        <svg xmlns="http://www.w3.org/2000/svg"
-            class="h-6 w-6 text-gray-700 hover:text-blue-600 transition-colors cursor-pointer" fill="none"
-            viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13l-1.2 6h12.4M7 13l1.5 6M9 21a1 1 0 100-2 1 1 0 000 2zm10 0a1 1 0 100-2 1 1 0 000 2z" />
-        </svg>
+        <!-- Shopping Cart Icon -->
+       <a href="cartlist.html"> <svg xmlns="http://www.w3.org/2000/svg"
+        class="h-6 w-6 text-gray-700 hover:text-blue-600 transition-colors cursor-pointer" fill="none"
+        viewBox="0 0 24 24" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+            d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13l-1.2 6h12.4M7 13l1.5 6M9 21a1 1 0 100-2 1 1 0 000 2zm10 0a1 1 0 100-2 1 1 0 000 2z" />
+    </svg></a>
 
-        <!-- Wishlist Icon (Heart) in Tailwind CSS -->
-        <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 text-black hover:text-red-600 transition duration-300"
-            fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                d="M4.318 6.318a4.5 4.5 0 016.364 0L12 7.636l1.318-1.318a4.5 4.5 0 116.364 6.364L12 21l-7.682-7.682a4.5 4.5 0 010-6.364z" />
-        </svg>
+        <!-- Wishlist Icon-->
+       <a href="wishlist.html"> <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 text-black hover:text-red-600 transition duration-300"
+        fill="none" viewBox="0 0 24 24" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+            d="M4.318 6.318a4.5 4.5 0 016.364 0L12 7.636l1.318-1.318a4.5 4.5 0 116.364 6.364L12 21l-7.682-7.682a4.5 4.5 0 010-6.364z" />
+    </svg></a>
         <!-- Login Button -->
         <a href="/login.html"><button
                 class="bg-blue-600 text-white px-5 py-2 rounded-lg shadow hover:bg-blue-700 transition duration-300">
