--- a/ecommerce.html
+++ b/ecommerce.html
@@ -11,7 +11,7 @@
 <body class="bg-gray-100">
     <header class="flex justify-between items-center bg-orange-400 p-4 shadow-md">
         <img src="images/Icon.png" alt="no image" class="w-10 h-10" />
-        <h1 class="text-2xl font-semibold">E-Commerce</h1>
+      <a href="ecommerce.html">  <h1 class="text-2xl font-semibold">E-Commerce</h1></a>
 
         <!-- Search Bar -->
         <div class="flex items-center max-w-md mx-auto bg-white border border-gray-300 rounded-full shadow-sm px-4 py-2">
