--- a/cartlist.html
+++ b/cartlist.html
@@ -11,8 +11,8 @@
 <body class="flex flex-col min-h-screen bg-gray-100">
     <header class="flex justify-between items-center bg-orange-400 p-4 shadow-md">
         <img src="images/Icon.png" alt="no image" class="w-10 h-10">
-        <h1 class="text-2xl font-semibold">E-Commerce</h1>
-
+        <a href="ecommerce.html"><h1 class="text-2xl font-semibold">E-Commerce</h1>
+        </a>
 
 
         <!-- Search Bar -->
